--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <span>Jan 09, 2019</span>
                         <span>⇒</span>
                         <a href="./entry-details/entry-details.html">
-                            EMINEM - LEGACY 
+                            EMINEM - LEGACY
                         </a>
                         </span>
                     </li>
@@ -37,7 +37,7 @@
                         <span>Jan 10, 2019</span>
                         <span>⇒</span>
                         <a href="#">
-                            Test Entry 1 
+                            Test Entry 1
                         </a>
                         </span>
                     </li>
@@ -45,7 +45,7 @@
                         <span>Jan 10, 2019</span>
                         <span>⇒</span>
                         <a href="#">
-                            Test Entry 2 
+                            Test Entry 2
                         </a>
                         </span>
                     </li>
@@ -53,16 +53,15 @@
             </div>
         </div>
 
-        </p>
         <footer class="footer">
-            <p>
+            <nav class="navbar">
                 <small>
-                    <a href="#">
-                        <i class="fa fa-hashtag"></i> Mojo
-                    </a>
+                    <a class="navbar-brand" href="#">Home</a>
+                    <a class="navbar-brand" href="#">About</a>
                 </small>
-            </p>
+            </nav>
         </footer>
     </div>
 </body>
+
 </html>
